welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    couleur = getCouleurSol()
                           ^SlugTracking:16: error: type mismatch;
 found   : Unit
 required: Boolean
    	return
        ^