welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:Boolean = false
    while(1==1){
    	avance()
    }
    couleur = getCouleurSol()
    do {
    	avance()
    	
    }
   	 	while(couleur == Color.green)  		
    				
   	 	
    		if(estFaceMur){
    	return
    }
        return couleur
}        
